tests/error/modifier_errors/captured_var_inout_own1.err
Error: Not owned (at $FILE:18:16)
   | 
16 |         with power(2):
17 |             pass
18 |         discard(a)
   |                 ^ Function `discard` wants to take ownership of this argument,
   |                   but we cannot transfer ownership inside a modifier body

Notes:
   | 
13 | def test() -> None:
14 |     a = qubit()
   |     - Argument `a` defined here ...
15 |     with dagger:
   |          ------ outside the modifier block

Guppy compilation failed due to 1 previous error
